tests/compiler/standaloneBreak/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.2/tests/cases/compiler/standaloneBreak.ts`, Apache-2.0 License

break;
//~^ ERROR: A 'break' statement can only be used within an enclosing iteration or switch statement.